Refactor replication handling and validation logic
- Updated ReplicationInfo to use ProtocolConstants for field names and added logging for initialization and state changes.
- Enhanced ValidationResult to support invalidation with custom messages.
- Improved ValidationUtils to provide more validation methods and simplified error handling.
- Introduced ReplconfHandler interface with specific handlers for different REPLCONF commands.
- Implemented ReplicationHandler to manage replication commands and full resynchronization.
- Added ProtocolConstants class to centralize protocol-related constants.
- Created CommandLineParser for parsing command-line arguments with error handling.
- Developed ProtocolParser for parsing protocol messages from ByteBuffer.
- Established ReplicationManager to manage replicas and propagate commands.
- Implemented ReplicationService for sending responses and commands to replicas.
- Configured logging properties for better debugging visibility.