@@ -1,24 +1,31 @@
 package validation;
 
 import commands.CommandArgs;
-import errors.ServerError;
 
 public final class ValidationUtils {
-    private ValidationUtils() {}
+    private ValidationUtils() {
+    }
 
     public static ValidationResult validateArgCount(CommandArgs args, int expected) {
         return args.argCount() == expected
                 ? ValidationResult.valid()
-                : ValidationResult.invalid(ServerError.validation(
-                        "wrong number of arguments for '%s' command".formatted(args.operation())));
+                : ValidationResult.invalid(String.format(
+                        "wrong number of arguments for '%s' command", args.operation()));
     }
 
     public static ValidationResult validateArgRange(CommandArgs args, int min, int max) {
         int count = args.argCount();
         return (count >= min && count <= max)
                 ? ValidationResult.valid()
-                : ValidationResult.invalid(ServerError.validation(
-                        "wrong number of arguments for '%s' command".formatted(args.operation())));
+                : ValidationResult.invalid(String.format(
+                        "wrong number of arguments for '%s' command", args.operation()));
+    }
+
+    public static ValidationResult validateMinArgs(CommandArgs args, int min) {
+        return args.argCount() >= min
+                ? ValidationResult.valid()
+                : ValidationResult.invalid(String.format(
+                        "wrong number of arguments for '%s' command", args.operation()));
     }
 
     public static ValidationResult validateInteger(String value) {
@@ -26,7 +33,16 @@ public final class ValidationUtils {
             Integer.parseInt(value);
             return ValidationResult.valid();
         } catch (NumberFormatException e) {
-            return ValidationResult.invalid(ServerError.validation("value is not an integer"));
+            return ValidationResult.invalid("value is not an integer");
+        }
+    }
+
+    public static ValidationResult validateLong(String value) {
+        try {
+            Long.parseLong(value);
+            return ValidationResult.valid();
+        } catch (NumberFormatException e) {
+            return ValidationResult.invalid("value is not a valid long");
         }
     }
 
@@ -35,16 +51,15 @@ public final class ValidationUtils {
             double timeout = Double.parseDouble(value);
             return timeout >= 0
                     ? ValidationResult.valid()
-                    : ValidationResult
-                            .invalid(ServerError.validation("timeout must be non-negative"));
+                    : ValidationResult.invalid("timeout must be non-negative");
         } catch (NumberFormatException e) {
-            return ValidationResult.invalid(ServerError.validation("invalid timeout value"));
+            return ValidationResult.invalid("invalid timeout value");
         }
     }
 
     public static ValidationResult validateStreamId(String id) {
         return ("*".equals(id) || id.endsWith("-*") || id.matches("\\d+-\\d+"))
                 ? ValidationResult.valid()
-                : ValidationResult.invalid(ServerError.validation("Invalid stream ID format"));
+                : ValidationResult.invalid("Invalid stream ID format");
     }
 }
